# ssri-test

./: .gitignore  Cargo.toml  README.md  checksums.txt  deployment.toml
ckb-ssri/: Cargo.toml
ckb-ssri-proc-macro/: Cargo.toml
ckb-ssri-proc-macro/src/: lib.rs
ckb-ssri/src/: lib.rs  prelude.rs
contracts/ssri-test/: Cargo.toml  README.md
contracts/ssri-test/src/: error.rs  fallback.rs  main.rs  ssri.rs  syscall.rs  udt.rs
migrations/: 2024-07-19-012332.json  2024-07-20-091011.json
